2003-12-17  Steffen Pingel  <squig@users.sourceforge.net>

	* librarywindow.cpp (LibraryWindow): Tweaked colors.

	* pinmodel.cpp (setType): Do not highlight already connected pins.

2003-09-30  Tammo van Lessen  <vanto@users.sourceforge.net>

	* project.cpp: connector (de)serialization changed, id bug fixed

2003-09-28  Steffen Pingel  <squig@users.sourceforge.net>

	* modelfactory.cpp (generate): Added input and output blocks.

2003-09-23  Steffen Pingel  <squig@users.sourceforge.net>

	* canvasview.cpp (contentsMousePressEvent): Disabled PinView
	popup. 

	* blockview.cpp: Raise block on select.

2003-09-21  Tammo van Lessen  <vanto@users.sourceforge.net>

	* connectorviewsegment.cpp (setSelected): Make connectors 
	selectable and removable.

	* mainwindow.cpp: Playing Haldenspezialist
	(fileNew): file new fixed.

	* aboutdialog.cpp (addFileTab): Playing Haldenspezialist.

	* connectorviewlist.cpp (ConnectorViewList): Connect to the
	PinModel's delete signal.

	* canvasview.cpp (CanvasView): Add connector popup, 
	assure that qt deletes the popupmenus automaticaly.

2003-09-19  Tammo van Lessen  <vanto@users.sourceforge.net>

	* mainwindow.cpp (editRemove): Cut and Remove for Blocks

2003-09-18  Tammo van Lessen  <vanto@users.sourceforge.net>

	* canvasview.cpp (dropEvent): Open BlockConfDialog on DropEvent

	* README: Logo added

	* main.cpp (main): Load project via commandline arg

	* pinmodel.cpp (isConnectable): Added isConnectable for pins

2003-09-18  Steffen Pingel  <squig@users.sourceforge.net>

	* canvasview.cpp (maybeTip): Fixed coordinate mapping.

2003-09-16  Steffen Pingel  <squig@users.sourceforge.net>

	* mainwindow.cpp (zoomStepwise): Check bounds, removed 1000%.

2003-09-15  Anselm Garbe  <garbeam@users.berlios.de>

	* connectormodel.h: removed

	* connectormodel.cpp: removed

	* gridcanvas.cpp (addConnectorView): added alternate method
	to provide connectorview creation

	* project.cpp (addConnectorViews): same as above
