@@ -18,7 +18,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
  *
- * $Id: settingsdialog.h,v 1.9 2003/12/10 13:40:01 papier Exp $
+ * $Id: settingsdialog.h,v 1.10 2004/01/09 14:05:29 squig Exp $
  *
  *****************************************************************************/
 #ifndef SETTINGSDIALOG_H
@@ -27,29 +27,31 @@
 #include <qvariant.h>
 #include <qtabdialog.h>
 
+class QComboBox;
 class QLineEdit;
 class QPushButton;
 class QSpinBox;
 
 /**
  * Provides the settings dialog.
- * 
+ *
  * The settings dialog has mutliple tabs.
  */
 class SettingsDialog : public QTabDialog
-{ 
+{
     Q_OBJECT
 
 public:
-    SettingsDialog(QWidget* parent = 0, const char* name = 0, 
+    SettingsDialog(QWidget* parent = 0, const char* name = 0,
                    bool modal = FALSE, WFlags fl = 0 );
     ~SettingsDialog();
 
-    QLineEdit* compilerLineEdit;
-    QLineEdit* cTemplateLineEdit;
-    QLineEdit* downloadLineEdit;
-    QLineEdit* editorLineEdit;
+    QLineEdit* compilerLineEdit_;
+    QLineEdit* cTemplateLineEdit_;
+    QLineEdit* downloadLineEdit_;
+    QLineEdit* editorLineEdit_;
     QSpinBox* gridSizeSpinBox_;
+    QComboBox* serialPortComboBox_;
 
 public slots:
     void applySettings();
@@ -62,7 +64,7 @@ private :
     QWidget *createGeneralTab();
     QWidget *createPathTab();
     QWidget *createDownloadTab();
-    void setup(); 
+    void setup();
 };
 
 #endif // SETTINGSDIALOG_H
